src/layout/Container/style-sidebar.css
*,
*:before,
*:after {
    box-sizing: border-box;
}

.dddd {
    /* Layout */
    --font: 'Arial', sans-serif;
    --background-color: rgba(27, 27, 27, 0.9);

    /* Panels */
    --panel-background-color: rgba(27, 27, 27, 0.9);
    --panel-spacing: 10px;

    /* Groups */
    --group-header-padding: 13px 13px;
    --group-header-font-size: 12px;
    --group-header-background-color: rgba(255, 255, 255, 0.03);
    --group-padding: 12px 11px 12px 13px;
    --group-border-radius: 8px;

    /* Components */
    --component-row-gap: 6px;

    /* Label */
    --label-width: 35%;
    --label-padding: 0 20px 0 0;
    --label-color: rgba(255, 255, 255, 0.5);
    --label-font-size: 12px;
    --label-font-weight: 400;

    /* Input */
    --input-background-color: rgba(255, 255, 255, 0.03);
    --input-background-color-hover: rgba(255, 255, 255, 0.08);
    --input-background-color-transition: background-color 0.35s ease-out;
    --input-highlight-color: rgba(77, 83, 217, 0.64);
    --input-highlight-color-hover: rgba(77, 83, 217, 1);
    --input-text-color: rgba(255, 255, 255, 0.75);
    --input-font-size: 12px;
    --input-font-weight: 300;
    --input-border-radius: 6px;
    --input-padding: 12px;
    --input-height: 32px;

    position: fixed;
    top: 0;
    right: 0;

    width: 300px;
    height: 100%;
    max-height: 100vh;

    background: var(--background-color);
}

.content {
    width: 100%;
    height: 100%;
    overflow: auto;
}

.resize-handle {
    position: absolute;

    padding: 0;

    background-color: transparent;

    border: 0;
    outline: 0;
}

.resize-handle.side {
    top: 0;
    left: 0;

    width: 6px;
    height: 100%;

    cursor: ew-resize;
}

.resize-handle.bottom {
    bottom: 0;
    left: 0;

    width: 100%;
    height: 6px;

    cursor: ns-resize;
}

.resize-handle.corner {
    bottom: 0;
    left: 0;

    width: 10px;
    height: 10px;

    cursor: nesw-resize;
}

